# SODS-Protocol

./: .dockerignore  .gitignore  ARCHITECTURE.md  AUDIT_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DSL_ROBUSTNESS_AUDIT.md  Dockerfile  GETTING_STARTED.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  ONCHAIN.md  P2P_RESILIENCE_AUDIT.md  README.md  SECURITY.md  STRESS_TEST_AUDIT.md  USE_CASES.md  ZK.md  build-zk.ps1  build-zk.sh  docker-compose.yml  test_output.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker.yml  erc8004-integration.yml  npm-wrapper.yml  rust.yml
.github/workflows/.github/workflows/: ci.yml
.orchids/: orchids.json
config/: alerts.yaml  sods-grafana-dashboard.json
contracts/: SODSVerifier.sol  SODSZKVerifier.sol  TestEscrow.sol  foundry.toml
contracts/test/: SODSVerifier.t.sol
dashboards/: sods-agent.json
demo/contracts/: Escrow.sol
demo/defi-protocol/: Cargo.toml
demo/defi-protocol/src/: main.rs
demo/defi-protocol/tests/: mev_protection.rs
demo/docs/: DEMO.md  blog-post-draft.md
docs/: CONTRACT_REGISTRY.md  ERC8004_INTEGRATION.md  ONCHAIN.md  PATTERN_SYNTAX.md  PRODUCTION_MONITORING.md  zero_rpc_guide.md
docs/audits/: L2_COMPATIBILITY_AUDIT.md  RPC_SECURITY_AUDIT.md  ZK_INTEGRITY_AUDIT.md
poc/: .env.example  README.md  bmt_builder.py  config.py  merkle.py  verifier.py
poc/proofs/: Dep_10002322.proof  Tf_10002322.proof  Tf_5000000.proof  Wdw_10002322.proof
scripts/: build-docker.sh  deploy-erc8004-agent.sh  run-demo.sh
sods-causal/: Cargo.toml
sods-causal/src/: error.rs  event.rs  lib.rs  pattern.rs  proof.rs  recorder.rs  reputation.rs  tree.rs  validation.rs
sods-causal/tests/: behavioral_proof_integration.rs  erc8004_integration.rs  event_model.rs  pattern_unit.rs  proof_integration.rs  recorder_integration.rs  tree_unit.rs
sods-cli/: Cargo.toml  registration.json
sods-cli-wrapper/: README.md  package-lock.json  package.json
sods-cli-wrapper/test/: error.test.js  path.test.js
sods-cli/scripts/: analyze_reliability.py
sods-cli/src/: config.rs  lib.rs  main.rs  output.rs
sods-cli/src/api/: causal.rs  health.rs  mod.rs
sods-cli/src/commands/: agent.rs  chains.rs  daemon.rs  discover.rs  export_proof.rs  hash_pattern.rs  listen.rs  mod.rs  monitor.rs  register_agent.rs  registry.rs  symbols.rs  threats.rs  trend.rs  verify.rs  zk_prove.rs
sods-cli/src/logging/: mod.rs
sods-cli/src/monitoring/: metrics.rs
sods-cli/tests/: ci_discover_test.rs  ci_monitor_test.rs  ci_pattern_test.rs  ci_threat_feed_test.rs  ci_trend_test.rs  ci_webhook_test.rs  e2e_daemon.rs  e2e_export_proof.rs  e2e_full_pipeline.rs  e2e_prometheus.rs  e2e_registry.rs  e2e_verify.rs  e2e_websocket.rs  erc8004_integration.rs  monitoring_integration.rs  stress_72h.rs
sods-cli/tests/common/: mod.rs
sods-cli/tests/erc8004/: agent_registration.rs  escrow_integration.rs  mod.rs  registration.json  reputation_feedback.rs  validation_cycle.rs
sods-core/: Cargo.toml  README.md
sods-core/benches/: pattern_bench.rs
sods-core/fuzz/: Cargo.toml
sods-core/fuzz/fuzz_targets/: bmt_builder.rs  dsl_parser.rs  l2_logs.rs  parse_fuzzer.rs
sods-core/src/: causal_tree.rs  commitment.rs  deployer.rs  dictionary.rs  error.rs  header_anchor.rs  lib.rs  mpt.rs  pattern.rs  plugins.rs  proof.rs  shadow.rs  ssz.rs  storage_proof.rs  symbol.rs  tree.rs
sods-core/src/registry/: migration.rs  mod.rs  schema.json  validator.rs
sods-core/tests/: amount_parsing.rs  ci_docs.rs  ci_dsl_robustness.rs  ci_range_patterns.rs  correctness.rs  dsl_validation.rs  fuzz_pattern.rs  integration_tests.rs  merkle_ordering.rs  range_quantifier.rs  registry_validation.rs
sods-p2p/: Cargo.toml
sods-p2p/src/: behavior.rs  bootstrappers.rs  cache.rs  client.rs  consensus.rs  error.rs  lib.rs  network.rs  peer.rs  protocol.rs  reputation.rs  threats.rs
sods-p2p/tests/: ci_hybrid_trust.rs  puzzle_timeout.rs
sods-verifier/: Cargo.toml
sods-verifier/src/: error.rs  header_anchor.rs  lib.rs  mempool.rs  query.rs  result.rs  rpc.rs  verifier.rs
sods-verifier/tests/: anchor_test.rs  cache_stampede.rs  ci_cache_stampede.rs  ci_dos.rs  ci_eclipse.rs  ci_gaming.rs  ci_l2_parity.rs  ci_malicious_rpc.rs  ci_p2p_adversarial.rs  ci_partition_healing.rs  ci_provider_consistency.rs  ci_rpc_resilience.rs  ci_storage_proof.rs  ci_zero_rpc_l2.rs  ci_zero_rpc_receipts.rs  ci_zero_rpc_storage.rs  consistency.rs  debug_l2_receipts.rs  integration.rs  memory_leak.rs  perf_incremental.rs  rpc_failure.rs  sepolia_integration.rs  trustless_verification.rs  zkevm_blob_logs.rs
sods-web/: index.html  package-lock.json  package.json  server.js
sods-web/src/: App.css  App.jsx  index.css
sods-zk/: Cargo.toml
sods-zk/methods/: Cargo.toml
sods-zk/methods/guest/: Cargo.toml
sods-zk/methods/guest/src/: main.rs
sods-zk/methods/src/: lib.rs  main.rs
sods-zk/src/: lib.rs
sods-zk/tests/: ci_zk_completeness.rs  ci_zk_privacy.rs  ci_zk_soundness.rs
spec/: SODS-RFC-v0.2.md  SODS-SPEC-v1.0.md
tests/: ci_beacon_fallback.rs  ci_p2p_sybil.rs  ci_puzzle_timeout.rs
