[package]
name = "sods-cli"
version = "1.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["LogicCrafter <logiccrafterdz@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "SODS Protocol CLI - On-chain behavioral verification"
repository = "https://github.com/logiccrafterdz/sods-protocol"
keywords = ["ethereum", "cli", "blockchain", "verification"]
categories = ["command-line-utilities"]

[[bin]]
name = "sods"
path = "src/main.rs"

[dependencies]
# SODS dependencies
sods-verifier = { path = "../sods-verifier" }
sods-core = { path = "../sods-core" }

# CLI parsing
clap = { version = "4.5", features = ["derive", "color"] }

# Async runtime
tokio = { version = "1.36", features = ["rt-multi-thread", "macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Terminal colors
colored = "2.1"
