[package]
name = "sods-cli"
version = "1.1.0"
edition = "2021"
rust-version = "1.70"
authors = ["LogicCrafter <logiccrafterdz@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "SODS Protocol CLI - On-chain behavioral verification"
repository = "https://github.com/logiccrafterdz/sods-protocol"
keywords = ["ethereum", "cli", "blockchain", "verification"]
categories = ["command-line-utilities"]

[[bin]]
name = "sods"
path = "src/main.rs"

[dependencies]
# SODS dependencies
sods-verifier = { path = "../sods-verifier" }
sods-core = { path = "../sods-core" }
sods-p2p = { path = "../sods-p2p" }
sods-zk = { path = "../sods-zk", optional = true }
hex = "0.4"
bincode = "1.3"
ethers-signers = "2.0"
ethers-core = "2.0"
rand = "0.8"
once_cell = "1.19"

# CLI parsing
clap = { version = "4.5", features = ["derive", "color"] }

# Async runtime
tokio = { version = "1.36", features = ["rt-multi-thread", "macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Terminal colors
colored = "2.1"
chrono = "0.4.43"

# Daemon dependencies
regex = "1.10"
dirs = "5.0" # Using dirs instead of directories for simplicity
sysinfo = "0.30"
notify-rust = "4.10"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
futures-util = "0.3"
tokio-tungstenite = "0.21"
uuid = { version = "1.7", features = ["v4", "serde"] }
prometheus = "0.13"
axum = "0.7"
http-body-util = "0.1"

[target.'cfg(unix)'.dependencies]
daemonize = "0.5"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"
wiremock = "0.6"
serde_json = "1.0"

[features]
default = ["zk"]
zk = ["dep:sods-zk"]
