[package]
name = "sods-core"
version = "0.2.0-beta"
edition = "2021"
rust-version = "1.70"
authors = ["LogicCrafter <logiccrafterdz@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "SODS Protocol Layer 0: Symbolic Core for Behavioral Merkle Trees"
repository = "https://github.com/logiccrafterdz/sods-protocol"
homepage = "https://github.com/logiccrafterdz/SODS-Protocol"
keywords = ["ethereum", "evm", "merkle", "blockchain", "verification"]
categories = ["cryptography", "data-structures"]

[dependencies]
# Hashing (Keccak256 primary, SHA-256 for legacy/header_anchor)
sha2 = "0.10"
sha3 = "0.10"
tiny-keccak = { version = "2.0", features = ["keccak"] }
triehash = "0.8"
hash-db = "0.15"

# Ethereum types: H256, Address, Log, etc.
ethers-core = "2.0"
ethabi = "18"

# Serialization for proofs and symbols
serde = { version = "1.0", features = ["derive"] }

# Compact binary encoding for proofs
bincode = "1.3"

# Clean error handling
thiserror = "1.0"
serde_json = "1.0.149"
home = "0.5"
jsonschema = "0.18"

[dev-dependencies]
# Hex encoding for test vectors
hex = "0.4"
# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.10"
proptest = "1.2"

[[bench]]
name = "pattern_bench"
harness = false

[features]
default = []
# Enable full metadata mode (includes addresses/amounts in leaf hashes)
full-metadata = []

