[package]
name = "sods-p2p"
version = "0.2.0"
edition = "2021"
rust-version = "1.70"
authors = ["LogicCrafter <logiccrafterdz@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "SODS Protocol Layer 2: P2P Proof Exchange Network"
repository = "https://github.com/logiccrafterdz/sods-protocol"
keywords = ["ethereum", "p2p", "libp2p", "blockchain", "verification"]
categories = ["network-programming", "cryptography"]

[dependencies]
# SODS dependencies
sods-core = { path = "../sods-core" }
sods-verifier = { path = "../sods-verifier" }

# P2P networking
libp2p = { version = "0.54", features = [
    "tokio",
    "identify",
    "request-response",
    "cbor",
    "noise",
    "tcp",
    "yamux",
    "macros",
    "gossipsub",
] }
libp2p-webrtc = { version = "0.9.0-alpha.1", features = ["tokio"] }
libp2p-quic = { version = "0.12.0-alpha.1", features = ["tokio"] }

# Async runtime
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "sync", "time"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"
hex = "0.4"

# Async trait support
async-trait = "0.1"

# Caching
lru = "0.12"

# Logging
tracing = "0.1"

# Cryptographic signing
k256 = { version = "0.13", features = ["ecdsa", "arithmetic", "std"] }
ed25519-dalek = "2.1"
sha2 = "0.10"
rand = "0.8"

# HTTP client for bootstrappers
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3"
