[package]
name = "sods-verifier"
version = "0.2.0"
edition = "2021"
rust-version = "1.70"
authors = ["LogicCrafter <logiccrafterdz@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "SODS Protocol Layer 1: Local Verifier for Behavioral Merkle Trees"
repository = "https://github.com/logiccrafterdz/sods-protocol"
keywords = ["ethereum", "evm", "merkle", "blockchain", "verification"]
categories = ["cryptography", "network-programming"]

[dependencies]
# SODS Core for symbolic encoding and BMT construction
sods-core = { path = "../sods-core" }

# Ethereum RPC client
ethers-providers = { version = "2.0", features = ["ws", "rustls"] }
ethers-core = "2.0"

# Async runtime
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "time"] }

# Error handling
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Caching
lru = "0.12"

# Random for jitter
rand = "0.8"
# Hex encoding
hex = "0.4"

# Keccak256 for trie hashing
sha3 = "0.10"

[dev-dependencies]
libp2p = "0.54"
sods-p2p = { path = "../sods-p2p" }

# For timing assertions
tokio-test = "0.4"
serde_json = "1.0"
triehash = "0.8.4"
hash-db = "0.15.2"
futures = "0.3"

[[test]]
name = "ci_beacon_fallback"
path = "../tests/ci_beacon_fallback.rs"
