[package]
name = "defi-protocol"
version = "0.1.0"
edition = "2024"

[dependencies]
sods-causal = { path = "../../sods-causal" }
ethers = { version = "2.0", features = ["rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = "0.4"

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
